# otonomsall

./: .gitignore  Dockerfile  README.md  create_ipm_matrix.py  create_ipm_matrix.py.enc  create_ipm_matrix.py.gpg  kayıt
src/: keyboard.py
src/line_detector_pkg/: package.xml  setup.cfg  setup.py
src/line_detector_pkg/line_detector_pkg/: line_detector_node.py
src/parking_controller_pkg/: package.xml  setup.cfg  setup.py
src/parking_controller_pkg/config/: params.yaml
src/parking_controller_pkg/launch/: parking_system_launch.py
src/parking_controller_pkg/parking_controller_pkg/: parking_controller_node.py  path_planner.py
src/robotaxi_behavior_planner/: package.xml  setup.cfg  setup.py
src/robotaxi_behavior_planner/robotaxi_behavior_planner/: behavior_planner_node.py  behavior_planner_node2.py
src/robotaxi_bringup/: package.xml  setup.cfg  setup.py
src/robotaxi_bringup/launch/: autoGps.launch.py  autonomous_drive.launch.py  lane_following_with_perception.launch.py  lidar_perception_planning.launch.py  lidar_perception_planning_hw.launch.py  lidar_stop_demo.launch.py  serittakibi.launch.py
src/robotaxi_control/: package.xml  setup.cfg  setup.py
src/robotaxi_control/robotaxi_control/: pid_controller_node.py  teleop_keyboard_node.py  ums_interface_node.py
src/robotaxi_hw_interface/: package.xml  setup.cfg  setup.py
src/robotaxi_hw_interface/robotaxi_hw_interface/: hw_interface_node.py  hw_interface_node2.py  test_vehicle_actuation.py
src/robotaxi_localization/: package.xml  setup.cfg  setup.py
src/robotaxi_localization/robotaxi_localization/: localization_node.py
src/robotaxi_mission_planner/: package.xml  setup.cfg  setup.py
src/robotaxi_perception/: package.xml  setup.cfg  setup.py
src/robotaxi_perception/config/: ipm_matrix.npy
src/robotaxi_planning/: package.xml  setup.cfg  setup.py
src/robotaxi_utils/: package.xml  setup.cfg  setup.py
src/simple_lane_follower/: package.xml  setup.cfg  setup.py
src/smart_can_msgs/: CMakeLists.txt
src/yolo_traffic_sign_detector/: package.xml  setup.cfg  setup.py
src/yolo_traffic_sign_detector/yolo_traffic_sign_detector/: yolo_traffic_sign_detector.py
src/yolo_traffic_sign_detector/yolo_traffic_sign_detector/data/: data.yaml
(+14 files in other folders)
