<package format="3">
  <name>parking_controller_pkg</name>
  <version>0.0.1</version>
  <description>Autonomous parking controller node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>smart_can_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
